--- a/Audio.html
+++ b/Audio.html
@@ -41,10 +41,10 @@
      <h3>Lossy Audio Files</h3>
      <h3>Examples of Lossy File Types</h3>
        <ul>
-         <li>MP3</li>
-         <li>Windows Media Audio Lossy (WMA Lossy)</li>
-         <li>Vorbis</li>
-         <li>Opus</li>
+         <li>MP3<sup>[3]</sup></li>
+         <li>Windows Media Audio Lossy (WMA Lossy)<sup>[3]</sup></li>
+         <li>Vorbis <sup>[3]</sup></li>
+         <li>Opus <sup>[3]</sup></li>
        </ul>
      <h3>How does lossy compression work?</h3>
        <p>The aim of lossy file compression is to reduce to size of the<br>
@@ -53,4 +53,10 @@
           Lossy compression can reduce to the file size by up to 80% of the<br>
           original size of the file, whith minimal noticeable effects.<a href="References.html">[5]</a></p>
       <h3>Why Use Lossy File Formats?</h3>
-        <p></p>
+        <p>Lossy compression enables even better file compression than lossless<br>
+           files by removing some of the information of the audio and simplifying<br>
+           the data. Of course, when doing this there will be a reduction in the <br>
+           quality of the audio, but by using techniques, only the audio that is not<br>
+           as important as the rest will be removed.<sup>[3]</sup> Lossy files compression is<br>
+           good to use when you need a file size to be very low and if it does not<br>
+           matter if anything if removed from the audio.</p>
