--- a/Images.html
+++ b/Images.html
@@ -28,7 +28,11 @@
            have broadband internet (which is most users), as<br>
            they cannot load files that have a high file size.<sup><a href="References.html">[2]</a></sup><br></li>
     <h3>The effects of lossy and lossless compression</h3>
-     <p></p>
+     <p>The effects of lossy compression is to reduce the file <br>
+        size by removing data that isn't as important as the rest<br>
+        of the data, and the effect of lossles compression is to <br>
+        reduce the size of the file without have a noticeable<br>
+        diffecerence on the image.</p> 
     <h3>Lowering the quality</h3>
     <table style="width:15%">
     <table border="1">
